old/lenovo-v15-g2-i5-rerun/test-logs/b7814cac5c55b7560a5dcac94409bf165f9c22bd/baseline-fp-2-opt-id.log
#####
baseline-fp-2-opt-id - Run 1
2024-02-15 14:27:59
#####
  File "/home/ubuntu/.phoronix-test-suite/installed-tests/system/selenium-top-sites-1.0.3/./run-benchmark.py", line 26
    self.driver = webdriver.()
                            ^
SyntaxError: invalid syntax

#####
baseline-fp-2-opt-id - Run 2
2024-02-15 14:28:04
#####
  File "/home/ubuntu/.phoronix-test-suite/installed-tests/system/selenium-top-sites-1.0.3/./run-benchmark.py", line 26
    self.driver = webdriver.()
                            ^
SyntaxError: invalid syntax

#####
baseline-fp-2-opt-id - Run 3
2024-02-15 14:28:06
#####
  File "/home/ubuntu/.phoronix-test-suite/installed-tests/system/selenium-top-sites-1.0.3/./run-benchmark.py", line 26
    self.driver = webdriver.()
                            ^
SyntaxError: invalid syntax

